add endpoint to switch order 2 tasks and 2 listsé
